--- a/Paper 3 PhD BNNs for multivariate predictions/EDAs and data processing/EDA on mineralogy and sulphides.ipynb
+++ b/Paper 3 PhD BNNs for multivariate predictions/EDAs and data processing/EDA on mineralogy and sulphides.ipynb
@@ -2,32 +2,165 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np \n",
     "import pandas as pd \n",
     "from scipy import linalg\n",
-    "import matplotlib.pyplot as plt\n",
-    "import torch\n",
-    "import torch.nn as nn\n",
-    "import torch.optim as optim\n",
-    "import torchbnn as bnn\n"
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
-    "two_composite_filtered = pd.read_csv(\"../Curated_data/two_composite_filtered.csv\", low_memory=False)"
+    "two_composite_filtered = pd.read_csv(\"../Curated_data/cluster_0_data.csv\", low_memory=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "81202"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(two_composite_filtered)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "PO    24673\n",
+       "SU    11405\n",
+       "PY      827\n",
+       "CP      678\n",
+       "MT       30\n",
+       "Name: Sulph1_Code, dtype: int64"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "two_composite_filtered['Sulph1_Code'].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "81202"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(two_composite_filtered)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "10546"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "non_na_values = two_composite_filtered['Sulph2_Pct'].notna()\n",
+    "filtered_df = two_composite_filtered[non_na_values]\n",
+    "len(filtered_df['Sulph2_Pct'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "PO    24673\n",
+       "SU    11405\n",
+       "PY      827\n",
+       "CP      678\n",
+       "MT       30\n",
+       "Name: Sulph1_Code, dtype: int64"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "two_composite_filtered['Sulph1_Code'].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "CP    16629\n",
+       "PO      920\n",
+       "PY      235\n",
+       "MT        3\n",
+       "PE        2\n",
+       "Name: Sulph2_Code, dtype: int64"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "two_composite_filtered['Sulph2_Code'].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -212,7 +345,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -463,7 +596,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -581,7 +714,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -600,7 +733,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -611,7 +744,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -700,7 +833,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -851,7 +984,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1115,7 +1248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1379,7 +1512,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1399,7 +1532,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1488,7 +1621,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'filtered_data' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32mc:\\Users\\23478671\\Github\\PhD-Thesis---Incorporating-Deep-Learning-into-Statistical-Models-for-Spatial-Interpolation\\Paper 3 PhD BNNs for multivariate predictions\\EDAs and data processing\\EDA on mineralogy and sulphides.ipynb Cell 16\u001b[0m line \u001b[0;36m<cell line: 1>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> <a href='vscode-notebook-cell:/c%3A/Users/23478671/Github/PhD-Thesis---Incorporating-Deep-Learning-into-Statistical-Models-for-Spatial-Interpolation/Paper%203%20PhD%20BNNs%20for%20multivariate%20predictions/EDAs%20and%20data%20processing/EDA%20on%20mineralogy%20and%20sulphides.ipynb#X22sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m filtered_data[\u001b[39m'\u001b[39m\u001b[39mSulph1_Code\u001b[39m\u001b[39m'\u001b[39m]\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'filtered_data' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "filtered_data['Sulph1_Code']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1646,7 +1800,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.6"
+   "version": "3.9.12"
   }
  },
  "nbformat": 4,
