--- a/Paper 3 PhD BNNs for multivariate predictions/NN Multivariate/Dimensionality reduction one cluster.ipynb
+++ b/Paper 3 PhD BNNs for multivariate predictions/NN Multivariate/Dimensionality reduction one cluster.ipynb
@@ -942,9 +942,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mThe kernel failed to start as a dll could not be loaded.\n",
+      "\u001b[1;31mClick <a href='https://aka.ms/kernelFailuresDllLoad'>here</a> for more info."
+     ]
+    }
+   ],
    "source": [
     "# Calculate the correlation matrix\n",
     "corr_matrix = filtered_data.corr()\n",
@@ -957,7 +967,7 @@
     "       'Mn_ppm', 'Ni_pct', 'Pb_ppm', 'S_pct', 'SulphTot_pct', 'Zn_ppm', 'Density_gcm3']\n",
     "\n",
     "# Create a list to store the variables that should be kept\n",
-    "variables_to_keep = [\"X\", \"Y\", \"Z\"]\n",
+    "variables_to_keep = [\"X\", \"Y\", \"Z\", 'Density_gcm3']\n",
     "\n",
     "# Create a list to store the variables to remove\n",
     "variables_to_remove = []\n",
@@ -1113,7 +1123,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.6"
+   "version": "3.9.12"
   }
  },
  "nbformat": 4,
