--- a/Paper 3 PhD BNNs for multivariate predictions/EDAs and data processing/EDA on mineralogy and sulphides.ipynb
+++ b/Paper 3 PhD BNNs for multivariate predictions/EDAs and data processing/EDA on mineralogy and sulphides.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -32,13 +32,191 @@
        "81202"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "len(two_composite_filtered)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Sample Number\n",
+      "Name\n",
+      "Depth From\n",
+      "Depth To\n",
+      "X\n",
+      "Y\n",
+      "Z\n",
+      "Length\n",
+      "Alt1_Code\n",
+      "Alt1_Int\n",
+      "Alt1_Style\n",
+      "Alt2_Code\n",
+      "Alt2_Int\n",
+      "Alt2_Style\n",
+      "Au_ppb\n",
+      "Comments\n",
+      "Core_Angle\n",
+      "Core_Diameter\n",
+      "CoreLoss_m\n",
+      "Cumulate\n",
+      "DataSet\n",
+      "Date_Logged\n",
+      "Density\n",
+      "Density_gcm3\n",
+      "Density_kgm3\n",
+      "Dest\n",
+      "Gamma_uRh\n",
+      "Gangue_Min\n",
+      "Interval_Length\n",
+      "Ir_ppb\n",
+      "Ja\n",
+      "Jn\n",
+      "Jr\n",
+      "Lith1_Code\n",
+      "Logged_By\n",
+      "Min1_Code\n",
+      "Min1_Pct\n",
+      "Min1_Style\n",
+      "Min2_Code\n",
+      "Min2_Pct\n",
+      "Min2_Style\n",
+      "Min3_Code\n",
+      "Min3_Pct\n",
+      "Min3_Style\n",
+      "Ore_Type\n",
+      "Ori_Confidence\n",
+      "Orig_Lith\n",
+      "Os_ppb\n",
+      "Pd_ppb\n",
+      "Proportion (Alt1_Code)\n",
+      "Proportion (Alt1_Int)\n",
+      "Proportion (Alt1_Style)\n",
+      "Proportion (Alt2_Code)\n",
+      "Proportion (Alt2_Int)\n",
+      "Proportion (Alt2_Style)\n",
+      "Proportion (Comments)\n",
+      "Proportion (DataSet)\n",
+      "Proportion (Date_Logged)\n",
+      "Proportion (Gangue_Min)\n",
+      "Proportion (Lith1_Code)\n",
+      "Proportion (Logged_By)\n",
+      "Proportion (Min1_Code)\n",
+      "Proportion (Min1_Style)\n",
+      "Proportion (Min2_Code)\n",
+      "Proportion (Min2_Style)\n",
+      "Proportion (Min3_Code)\n",
+      "Proportion (Min3_Style)\n",
+      "Proportion (Ore_Type)\n",
+      "Proportion (Ori_Confidence)\n",
+      "Proportion (Orig_Lith)\n",
+      "Proportion (samp_id)\n",
+      "Proportion (SampleID)\n",
+      "Proportion (Sulph1_Code)\n",
+      "Proportion (Sulph1_Style)\n",
+      "Proportion (Sulph2_Code)\n",
+      "Proportion (Sulph2_Style)\n",
+      "Proportion (Sulph3_Code)\n",
+      "Proportion (Sulph3_Style)\n",
+      "Proportion (Vein1_Comp)\n",
+      "Proportion (Vein1_Style)\n",
+      "Proportion (Vein2_Comp)\n",
+      "Proportion (Vein2_Style)\n",
+      "Pt_ppb\n",
+      "Q\n",
+      "Reading_den\n",
+      "Reading_susc\n",
+      "Recovery_m\n",
+      "Recovery_Pct\n",
+      "Res_Wenner_ohmm\n",
+      "Rh_ppb\n",
+      "RQD_m\n",
+      "RQD_Pct\n",
+      "samp_id\n",
+      "SampleID\n",
+      "Sulph1_Code\n",
+      "Sulph1_Pct\n",
+      "Sulph1_Style\n",
+      "Sulph2_Code\n",
+      "Sulph2_Pct\n",
+      "Sulph2_Style\n",
+      "Sulph3_Code\n",
+      "Sulph3_Pct\n",
+      "Sulph3_Style\n",
+      "Susc_SI\n",
+      "Vein1_Comp\n",
+      "Vein1_Pct\n",
+      "Vein1_Style\n",
+      "Vein2_Comp\n",
+      "Vein2_Pct\n",
+      "Vein2_Style\n",
+      "Weathering\n",
+      "Ag_ppm\n",
+      "Al_pct\n",
+      "Ars_ppm\n",
+      "B_ppm\n",
+      "Ba_ppm\n",
+      "Be_ppm\n",
+      "Bi_ppm\n",
+      "Ca_pct\n",
+      "Cd_ppm\n",
+      "Ce_ppm\n",
+      "Cl_ppm\n",
+      "Co_ppm\n",
+      "Cr_ppm\n",
+      "Cu_pct\n",
+      "Fe_pct\n",
+      "Ga_ppm\n",
+      "IP_pct\n",
+      "K_pct\n",
+      "La_ppm\n",
+      "Li_ppm\n",
+      "Mg_pct\n",
+      "Mn_ppm\n",
+      "Mo_ppm\n",
+      "Na_pct\n",
+      "Nb_ppm\n",
+      "Ni_pct\n",
+      "NiCuEq_pct\n",
+      "NiS_pct\n",
+      "OlivineTot_pct\n",
+      "P_ppm\n",
+      "Pb_ppm\n",
+      "Rb_ppm\n",
+      "Re_ppm\n",
+      "S_pct\n",
+      "Sb_ppm\n",
+      "Sc_ppm\n",
+      "Si_pct\n",
+      "Sn_ppm\n",
+      "Sr_ppm\n",
+      "SulphTot_pct\n",
+      "Te_ppm\n",
+      "Th_ppm\n",
+      "Ti_pct\n",
+      "Tl_ppm\n",
+      "U_ppm\n",
+      "V_ppm\n",
+      "W_ppm\n",
+      "Y_ppm\n",
+      "Zn_ppm\n",
+      "Zr_ppm\n"
+     ]
+    }
+   ],
+   "source": [
+    "for col in two_composite_filtered:\n",
+    "    print(col)"
    ]
   },
   {
@@ -84,6 +262,31 @@
    ],
    "source": [
     "len(two_composite_filtered)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "PY    512\n",
+       "CP    148\n",
+       "PO     64\n",
+       "MT     53\n",
+       "PE     23\n",
+       "Name: Sulph3_Code, dtype: int64"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "two_composite_filtered['Sulph3_Code'].value_counts()"
    ]
   },
   {
@@ -154,6 +357,15 @@
      "output_type": "execute_result"
     }
    ],
+   "source": [
+    "two_composite_filtered['Sulph2_Code'].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "two_composite_filtered['Sulph2_Code'].value_counts()"
    ]
