multivariate_predictions_density

--- a/Paper 3 PhD BNNs for multivariate predictions/NN only spatial/NN 3D 1 hole.ipynb
+++ b/Paper 3 PhD BNNs for multivariate predictions/NN only spatial/NN 3D 1 hole.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,14 +44,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\flea0265\\AppData\\Local\\Temp\\ipykernel_14044\\358685020.py:37: SettingWithCopyWarning:\n",
+      "C:\\Users\\flea0265\\AppData\\Local\\Temp\\ipykernel_10584\\358685020.py:37: SettingWithCopyWarning:\n",
       "\n",
       "\n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
@@ -59,7 +59,7 @@
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "\n",
-      "C:\\Users\\flea0265\\AppData\\Local\\Temp\\ipykernel_14044\\358685020.py:45: SettingWithCopyWarning:\n",
+      "C:\\Users\\flea0265\\AppData\\Local\\Temp\\ipykernel_10584\\358685020.py:45: SettingWithCopyWarning:\n",
       "\n",
       "\n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
@@ -325,7 +325,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -468,33 +468,163 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Metrics for Test set:\n",
-      "  MSE: 0.0150\n",
-      "  RMSE: 0.1223\n",
-      "  MAE: 0.1014\n",
-      "  R^2: 0.5675\n",
       "\n",
-      "Metrics for Training set:\n",
-      "  MSE: 0.0160\n",
-      "  RMSE: 0.1267\n",
-      "  MAE: 0.0993\n",
-      "  R^2: 0.3717\n",
-      "\n"
+      "Metrics for Fold 1:\n",
+      "Metrics for Test set:\n",
+      "  MSE: 0.0163\n",
+      "  RMSE: 0.1277\n",
+      "  MAE: 0.1083\n",
+      "  R^2: 0.2477\n",
+      "\n",
+      "\n",
+      "Metrics for Fold 2:\n",
+      "Metrics for Test set:\n",
+      "  MSE: 0.0143\n",
+      "  RMSE: 0.1196\n",
+      "  MAE: 0.1012\n",
+      "  R^2: 0.2489\n",
+      "\n",
+      "\n",
+      "Metrics for Fold 3:\n",
+      "Metrics for Test set:\n",
+      "  MSE: 0.0163\n",
+      "  RMSE: 0.1275\n",
+      "  MAE: 0.0976\n",
+      "  R^2: 0.4703\n",
+      "\n",
+      "\n",
+      "Metrics for Fold 4:\n",
+      "Metrics for Test set:\n",
+      "  MSE: 0.0224\n",
+      "  RMSE: 0.1496\n",
+      "  MAE: 0.1150\n",
+      "  R^2: 0.1844\n",
+      "\n",
+      "\n",
+      "Metrics for Fold 5:\n",
+      "Metrics for Test set:\n",
+      "  MSE: 0.0195\n",
+      "  RMSE: 0.1397\n",
+      "  MAE: 0.1071\n",
+      "  R^2: 0.4064\n",
+      "\n",
+      "\n",
+      "Average Metrics Across Folds:\n",
+      "  Average MSE: 0.0178\n",
+      "  Average RMSE: 0.1328\n",
+      "  Average MAE: 0.1058\n",
+      "  Average R^2: 0.3115\n"
      ]
     }
    ],
-   "source": []
+   "source": [
+    "import numpy as np\n",
+    "import torch\n",
+    "import torch.nn as nn\n",
+    "import torch.optim as optim\n",
+    "from sklearn.model_selection import KFold\n",
+    "from sklearn.metrics import mean_squared_error, mean_absolute_error, r2_score\n",
+    "test_mse_list = []\n",
+    "test_rmse_list = []\n",
+    "test_mae_list = []\n",
+    "test_r2_list = []\n",
+    "# Assuming your model, data, and metrics functions are defined previously\n",
+    "np.random.seed(42)\n",
+    "torch.manual_seed(42)\n",
+    "# Define the number of folds for cross-validation\n",
+    "num_folds = 5\n",
+    "kf = KFold(n_splits=num_folds, shuffle=True, random_state=42)\n",
+    "\n",
+    "# Lists to store evaluation metrics across folds\n",
+    "\n",
+    "\n",
+    "# ...\n",
+    "\n",
+    "# Perform k-fold cross-validation\n",
+    "for fold, (train_index, test_index) in enumerate(kf.split(x)):\n",
+    "    x_train_fold, x_test_fold = x[train_index], x[test_index]\n",
+    "    y_train_fold, y_test_fold = y[train_index], y[test_index]\n",
+    "\n",
+    "    # Assuming your model is defined earlier\n",
+    "\n",
+    "    # Define your neural network\n",
+    "    model = nn.Sequential(\n",
+    "        nn.Linear(in_features=3, out_features=500),\n",
+    "        nn.ReLU(),\n",
+    "        nn.Linear(in_features=500, out_features=1)\n",
+    "    )\n",
+    "\n",
+    "    mse_loss = nn.MSELoss()\n",
+    "    optimizer = optim.Adam(model.parameters(), lr=0.001)\n",
+    "\n",
+    "    train_losses = []  # To store training losses during training\n",
+    "    test_losses = []   # To store test losses during training\n",
+    "\n",
+    "    # Training loop\n",
+    "    for step in range(6000):\n",
+    "        pre = model(x_train_fold)\n",
+    "        mse = mse_loss(pre, y_train_fold.reshape(-1,1))\n",
+    "        cost = mse\n",
+    "\n",
+    "        optimizer.zero_grad()\n",
+    "        cost.backward()\n",
+    "        optimizer.step()\n",
+    "\n",
+    "        pre_test = model(x_test_fold)\n",
+    "        mse_test = mse_loss(pre_test, y_test_fold.reshape(-1,1))\n",
+    "        test_losses.append(mse_test.item())\n",
+    "\n",
+    "    # Store metrics for this fold\n",
+    "    test_predictions_fold = model(x_test_fold).detach().numpy().flatten()\n",
+    "    y_test_fold_flat = y_test_fold.flatten()\n",
+    "    test_mse_list.append(mean_squared_error(y_test_fold_flat, test_predictions_fold))\n",
+    "    test_rmse_list.append(np.sqrt(test_mse_list[-1]))\n",
+    "    test_mae_list.append(mean_absolute_error(y_test_fold_flat, test_predictions_fold))\n",
+    "    test_r2_list.append(r2_score(y_test_fold_flat, test_predictions_fold))\n",
+    "\n",
+    "    # Print metrics for the current fold\n",
+    "    print(f\"\\nMetrics for Fold {fold + 1}:\")\n",
+    "    print_metrics(y_test_fold_flat, test_predictions_fold, \"Test\")\n",
+    "\n",
+    "# Print average metrics across folds\n",
+    "print(\"\\nAverage Metrics Across Folds:\")\n",
+    "print(f\"  Average MSE: {np.mean(test_mse_list):.4f}\")\n",
+    "print(f\"  Average RMSE: {np.mean(test_rmse_list):.4f}\")\n",
+    "print(f\"  Average MAE: {np.mean(test_mae_list):.4f}\")\n",
+    "print(f\"  Average R^2: {np.mean(test_r2_list):.4f}\")\n",
+    "\n"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "385"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
